XO overflow of page fixed

--- a/games/xo/xo.css
+++ b/games/xo/xo.css
@@ -20,13 +20,11 @@
 body {
     background-color: #313131;
     margin: 0;
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
 }
 .kol {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
     position: relative;
 }
 .xo {
